--- a/quoteweb/public/index.html
+++ b/quoteweb/public/index.html
@@ -10,21 +10,26 @@
 </head>
 <body>
     <div class="quote-card">
-        <div class="quote-content">
-            <span class="quote-mark">“</span>
-            <p class="quote-text" id="quoteText">Loading...</p>
-            <p class="quote-author" id="quoteAuthor"></p>
-            <div class="twitter-icon">
-                <i class="fa-brands fa-x-twitter fa-2xs" style="color: #FFD43B;"></i>
+        <div class="card">
+            <div class="card-inner">
+                <div class="card-social">
+                    <div class="card-social__item">
+                        <i class="fab fa-twitter"></i>
+                    </div>
+                    <div class="card-social__item">
+                        <i class="fab fa-instagram"></i>
+                    </div>
+                </div>
+                <div class="quote-content">
+                    <span class="quote-mark">“</span>
+                    <p class="quote-text" id="quoteText">Loading...</p>
+                    <p class="quote-author" id="quoteAuthor"></p>
+                </div>
+                <div class="quote-footer">
+                    <button class="new-quote-btn" id="newQuoteBtn">New Quote</button>
+                </div>
             </div>
         </div>
-        <div class="quote-footer">
-            <button class="new-quote-btn" id="newQuoteBtn">New Quotes</button>
-        </div>
     </div>
-
 </body>
-
-
-
 </html>
