--- a/quoteweb/public/index.html
+++ b/quoteweb/public/index.html
@@ -6,7 +6,7 @@
     <title>Quote Card</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-    <script src="script.js" defer></script>
+    <script src="script.js" defer></script> 
 </head>
 <body>
     <div class="quote-card">
@@ -22,7 +22,7 @@
                 </div>
                 <div class="quote-content">
                     <span class="quote-mark">“</span>
-                    <p class="quote-text" id="quoteText">Loading...</p>
+                    <p class="quote-text" id="quoteText">Wait Kare Le Bhai...</p>
                     <p class="quote-author" id="quoteAuthor"></p>
                 </div>
                 <div class="quote-footer">
